// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessPage should match a snapshot when submitCompleteFormState is PENDING 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
  >
    <Component>
      Referral Complete
      <span>
        <FaCheck />
      </span>
    </Component>
    <div>
      <p>
        Thank you for your referral. Our dedicated team will now process the information you have submitted, and we will be in contact with you in due course.
      </p>
      <p
        className="my-5"
      >
        Please ‘Complete Submission’ in order to continue.
      </p>
      <p>
        Should you have any queries in the meantime, please do not hesitate to contact our team.
      </p>
    </div>
    <div>
      <Component
        buttonProps={
          Object {
            "disabled": false,
            "loading": false,
            "onClick": [Function],
            "type": "button",
            "variant": "primary",
          }
        }
        dynamicLinkParams={
          Object {
            "appMode": "WEB",
            "entityCode": "MKC16000007",
            "entityType": "contacts",
            "webRoute": "/",
          }
        }
      >
        Complete Submission
      </Component>
    </div>
  </Component>
</Connect(ErrorBoundary)>
`;

exports[`SuccessPage should match a snapshot when submitCompleteFormState is SUBMITTING 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
  >
    <Component>
      Referral Complete
      <span>
        <FaCheck />
      </span>
    </Component>
    <div>
      <p>
        Thank you for your referral. Our dedicated team will now process the information you have submitted, and we will be in contact with you in due course.
      </p>
      <p
        className="my-5"
      >
        Please ‘Complete Submission’ in order to continue.
      </p>
      <p>
        Should you have any queries in the meantime, please do not hesitate to contact our team.
      </p>
    </div>
    <div>
      <Component
        buttonProps={
          Object {
            "disabled": true,
            "loading": true,
            "onClick": [Function],
            "type": "button",
            "variant": "primary",
          }
        }
        dynamicLinkParams={
          Object {
            "appMode": "WEB",
            "entityCode": "MKC16000007",
            "entityType": "contacts",
            "webRoute": "/",
          }
        }
      >
        Complete Submission
      </Component>
    </div>
  </Component>
</Connect(ErrorBoundary)>
`;

exports[`SuccessPage should match a snapshot when submitCompleteFormState is SUCCESS 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
  >
    <Component>
      Referral Complete
      <span>
        <FaCheck />
      </span>
    </Component>
    <div>
      <p>
        Thank you for your referral. Our dedicated team will now process the information you have submitted, and we will be in contact with you in due course.
      </p>
      <p
        className="my-5"
      >
        Please ‘Complete Submission’ in order to continue.
      </p>
      <p>
        Should you have any queries in the meantime, please do not hesitate to contact our team.
      </p>
    </div>
    <div>
      <Component
        buttonProps={
          Object {
            "disabled": false,
            "loading": false,
            "onClick": [Function],
            "type": "button",
            "variant": "primary",
          }
        }
        dynamicLinkParams={
          Object {
            "appMode": "WEB",
            "entityCode": "MKC16000007",
            "entityType": "contacts",
            "webRoute": "/",
          }
        }
      >
        Complete Submission
      </Component>
    </div>
  </Component>
</Connect(ErrorBoundary)>
`;
